# stdoc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
res/: footer.html  header.html
src/: CMakeLists.txt  stdoc_io.c  stdoc_io.h
